# freeRTOS-pico

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
include/drone_project/config/: project_config.hpp
include/drone_project/drivers/: i2c_device.hpp  l3gd20.hpp  lsm303d_accel.hpp  motor_driver.hpp
include/drone_project/tasks/: accel_task.hpp  control_task.hpp  gyro_task.hpp  imu_task.hpp  led_task.hpp  log_task.hpp  motor_task.hpp  system_task.hpp  task_wrapper.hpp
include/drone_project/tasks/sim/: imu_sim_task.hpp  rc_sim_task.hpp
include/drone_project/types/: comms_data.hpp  control_data.hpp  sensor_data.hpp  system_data.hpp
include/imu_project/config/: project_config.hpp
include/imu_project/drivers/: i2c_device.hpp  l3gd20.hpp  lsm303d_accel.hpp
include/imu_project/tasks/: accel_task.hpp  gyro_task.hpp  led_task.hpp  log_task.hpp  task_wrapper.hpp
include/imu_project/types/: sensor_data.hpp
src/: CMakeLists.txt  main.cpp
src/drivers/: i2c_device.cpp  l3gd20.cpp  lsm303d_accel.cpp  motor_driver.cpp
src/tasks/: accel_task.cpp  control_task.cpp  gyro_task.cpp  imu_task.cpp  led_task.cpp  log_task.cpp  motor_task.cpp  system_task.cpp
src/tasks/sim/: imu_sim_task.cpp  rc_sim_task.cpp
