cmake_minimum_required(VERSION 3.12)

# Name project
SET(ProjectName freeRTOS_Pico_Project)

# Set path to the Raspberry Pi Pico SDK (set here your SDK path)
SET(PICO_SDK_PATH "/home/alejandro/Github/pico-sdk")

# Set any variables required for importing libraries
SET(FREERTOS_KERNEL_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib/FreeRTOS-Kernel)

# Import those libraries
include(pico_sdk_import.cmake)
include(${FREERTOS_KERNEL_PATH}/portable/ThirdParty/GCC/RP2040/FreeRTOS_Kernel_import.cmake)

# Define project
project(${ProjectName})

# Initialize the Raspberry Pi Pico SDK
pico_sdk_init()

# Add include directory for our headers
include_directories(include)

# Add subdirectories
add_subdirectory(src)
